# Task_Manager

./: .gitignore  Makefile  pyproject.toml  setup.cfg
task_manager/: asgi.py  mixins.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_rename_created_date_task_date_created_and_more.py  0003_alter_task_description_tasklabelrelation_task_label.py  0004_remove_task_label_task_labels_alter_task_status.py
task_manager/templates/: 404.html  base.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/templates/tasks/: delete.html  task_show.html  tasks.html
task_manager/templates/users/: create.html  delete.html  users.html
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
