[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Irina Kurus <evans.mira@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
