[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Irina Kurus <evans.mira@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
gunicorn = "^22.0.0"
django-bootstrap4 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
